--- a/index.html
+++ b/index.html
@@ -70,32 +70,10 @@
                 <button class="action-btn" id="resetBtn">
                     <span class="material-icons">refresh</span>
                 </button>
-                <button class="action-btn" id="shareBtn">
-                    <span class="material-icons">share</span>
-                </button>
-                <button class="action-btn primary" id="downloadBtn">
-                    <span class="material-icons">download</span>
-                </button>
             </div>
         </div>
         <div class="canvas-container">
             <canvas id="canvas"></canvas>
-        </div>
-        
-        <!-- قائمة تحكم النص المنبثقة -->
-        <div id="textControlMenu" class="text-control-menu" style="display: none;">
-            <button class="control-btn" id="flipTextBtn">
-                <span class="material-icons">swap_vert</span>
-                <span data-translate="flip-text">Flip</span>
-            </button>
-            <button class="control-btn" id="duplicateTextBtn">
-                <span class="material-icons">content_copy</span>
-                <span data-translate="duplicate-text">Duplicate</span>
-            </button>
-            <button class="control-btn" id="adjustWidthBtn">
-                <span class="material-icons">format_align_justify</span>
-                <span data-translate="adjust-width">Width</span>
-            </button>
         </div>
         
         <div class="tools-drawer" id="toolsDrawer">
@@ -302,12 +280,7 @@
                 <h3 data-translate="links-title">Links</h3>
                 <a href="https://images.pexels.com/photos/7615523/pexels-photo-7615523.jpeg" target="_blank" class="setting-link">
                     <span class="material-icons">info</span>
-                    <span data-translate="about">About App</span>
-                    <span class="material-icons">chevron_right</span>
-                </a>
-                <a href="https://images.pexels.com/photos/7615523/pexels-photo-7615523.jpeg" target="_blank" class="setting-link">
-                    <span class="material-icons">copyright</span>
-                    <span data-translate="copyright">Copyright</span>
+                    <span data-translate="about">About & Copyright</span>
                     <span class="material-icons">chevron_right</span>
                 </a>
                 <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
@@ -318,11 +291,6 @@
                 <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
                     <span class="material-icons">email</span>
                     <span data-translate="contact">Contact Us</span>
-                    <span class="material-icons">chevron_right</span>
-                </a>
-                <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
-                    <span class="material-icons">bug_report</span>
-                    <span data-translate="report">Report Issue</span>
                     <span class="material-icons">chevron_right</span>
                 </a>
             </div>
