--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <button class="action-btn" id="resetBtn">
                     <span class="material-icons">refresh</span>
                 </button>
+                <button class="action-btn primary" id="downloadBtn">
+                    <span class="material-icons">download</span>
+                </button>
             </div>
         </div>
         <div class="canvas-container">
