--- a/index.html
+++ b/index.html
@@ -6,69 +6,21 @@
     <title>Professional Photo Editor</title>
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.bunny.net">
-    <link href="https://fonts.bunny.net/css?family=abeezee:400,400i|abhaya-libre:600,800|aboreto:400|abril-fatface:400|abyssinica-sil:400|aclonica:400|acme:400|advent-pro:700i,800i,900i|aguafina-script:400|akaya-telivigala:400|akronim:400|aladin:400|aldrich:400|alegreya:600i,700,900,900i|alegreya-sc:500,500i,800,900i|alex-brush:400|alfa-slab-one:400|allan:400,700|almendra:400i,700i|almendra-sc:400|alumni-sans:100,200,500i,800i|alumni-sans-inline-one:400,400i|amatic-sc:700|amita:700|arbutus:400|architects-daughter:400|are-you-serious:400|aref-ruqaa:400,700|asset:400|astloch:400,700|atomic-age:400|aubrey:400|audiowide:400|bahiana:400|bakbak-one:400|ballet:400|bangers:400|barriecito:400|beau-rivage:400|berkshire-swash:400|beth-ellen:400|bhutuka-expanded-one:400|big-shoulders-display:100,400,800,900|bigelow-rules:400|biorhyme-expanded:200,700,800|black-and-white-picture:400|bonbon:400|bowlby-one-sc:400|bruno-ace:400|bungee:400|bungee-inline:400|bungee-outline:400|bungee-shade:400|bungee-tint:400|butcherman:400|caesar-dressing:400|castoro-titling:400|chathura:300,800|cinzel:500,900|cute-font:400|damion:400|diplomata:400|dokdo:400|dorsa:400|dr-sugiyama:400|eagle-lake:400|edu-qld-beginner:400,700|erica-one:400|fascinate:400|faster-one:400|fleur-de-leah:400|ga-maamli:400|gajraj-one:400|great-vibes:400|hanalei:400|homemade-apple:400|honk:400|ibm-plex-sans-arabic:400,700|jacquard-12-charted:400|jacquard-24-charted:400|jacquarda-bastarda-9:400|jersey-25-charted:400|jomhuria:400|kablammo:400|kalnia-glaze:300,700|kumar-one-outline:400|libre-barcode-39-text:400|limelight:400|major-mono-display:400|moirai-one:400|monofett:400|monoton:400|mrs-sheppards:400|nosifer:400|noto-kufi-arabic:400,800,900|palette-mosaic:400|rock-salt:400|rubik-beastly:400|rubik-broken-fax:400|rubik-gemstones:400|rubik-glitch-pop:400|rubik-puddles:400|sancreek:400|sixtyfour:400|sonsie-one:400" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agu+Display&family=Allura&family=Almarai:wght@300;400;700;800&family=Anton&family=Archivo+Black&family=Aref+Ruqaa+Ink:wght@400;700&family=Aref+Ruqaa:wght@400;700&family=Audiowide&family=BBH+Bartle&family=Bahianita&family=Bangers&family=Barriecito&family=Barrio&family=Bebas+Neue&family=Berkshire+Swash&family=Bigelow+Rules&family=Bitcount+Single:wght@100..900&family=Blaka&family=Blaka+Hollow&family=Blaka+Ink&family=Borel&family=Bungee&family=Bungee+Shade&family=Bungee+Spice&family=Bungee+Tint&family=Butcherman&family=Caesar+Dressing&family=Cairo+Play:wght@200..1000&family=Codystar:wght@300;400&family=Coral+Pixels&family=Creepster&family=Dancing+Script:wght@400..700&family=Danfo&family=Dorsa&family=Eater&family=Edu+SA+Hand:wght@400..700&family=El+Messiri:wght@400..700&family=Engagement&family=Exile&family=Faster+One&family=Fjalla+One&family=Fustat:wght@200..800&family=Geostar&family=Gloria+Hallelujah&family=Gravitas+One&family=Hanalei&family=Hanalei+Fill&family=Honk:MORF@15&family=Jomhuria&family=Kablammo&family=Kalnia+Glaze:wght@100..700&family=Kufam:ital,wght@0,400..900;1,400..900&family=Lalezar&family=Lateef:wght@200;300;400;500;600;700;800&family=League+Gothic&family=League+Script&family=Lemonada:wght@300..700&family=Libertinus+Keyboard&family=Libre+Barcode+39+Extended+Text&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Londrina+Shadow&family=Luckiest+Guy&family=Lugrasimo&family=Macondo&family=Mada:wght@200..900&family=Matemasie&family=Moirai+One&family=Molle:ital@1&family=Momo+Signature&family=Monofett&family=Monoton&family=Moo+Lah+Lah&family=Nabla&family=Nosifer&family=Noto+Color+Emoji&family=Noto+Emoji:wght@300..700&family=Noto+Naskh+Arabic:wght@400..700&family=Noto+Nastaliq+Urdu:wght@400..700&family=Oi&family=Oleo+Script:wght@400;700&family=Oswald:wght@200..700&family=Pacifico&family=Patrick+Hand+SC&family=Permanent+Marker&family=Pirata+One&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+GB+J+Guides:ital@0;1&family=Qahiri&family=Rakkas&family=Reem+Kufi+Ink&family=Reem+Kufi:wght@400..700&family=Rock+Salt&family=Rubik+Iso&family=Rubik+Puddles&family=Rubik+Storm&family=Ruwudu:wght@400;500;600;700&family=Sancreek&family=Six+Caps&family=Sixtyfour+Convergence&family=Smokum&family=Special+Gothic+Condensed+One&family=Story+Script&family=Sue+Ellen+Francisco&family=Syncopate:wght@400;700&family=Trade+Winds&family=UnifrakturCook:wght@700&family=Yesteryear&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&family=Zen+Tokyo+Zoo&family=Zilla+Slab+Highlight:wght@400;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body data-theme="dark">
-    <div id="categoriesPage" class="page active">
-        <div class="top-bar">
-            <h1 data-translate="categories">Image Categories</h1>
-        </div>
-        <div class="categories-grid" id="categoriesGrid"></div>
-        <div class="bottom-nav">
-            <button class="nav-btn active" data-page="categories">
-                <span data-translate="nav-categories">Categories</span>
-                <span class="material-icons">grid_view</span>
-            </button>
-            <button class="nav-btn" data-page="editor">
-                <span data-translate="nav-editor">Editor</span>
-                <span class="material-icons">edit</span>
-            </button>
-            <button class="nav-btn" data-page="settings">
-                <span data-translate="nav-settings">Settings</span>
-                <span class="material-icons">settings</span>
-            </button>
-        </div>
-    </div>
-
-    <div id="galleryPage" class="page">
-        <div class="top-bar">
-            <button class="back-btn" id="galleryBackBtn">
-                <span class="material-icons">arrow_back</span>
-            </button>
-            <h1 id="galleryTitle">Images</h1>
-        </div>
-        <div class="gallery-grid" id="galleryGrid">
-            <div class="loading">
-                <div class="spinner"></div>
-            </div>
-        </div>
-        <div class="bottom-nav">
-            <button class="nav-btn" data-page="categories">
-                <span data-translate="nav-categories">Categories</span>
-                <span class="material-icons">grid_view</span>
-            </button>
-            <button class="nav-btn" data-page="editor">
-                <span data-translate="nav-editor">Editor</span>
-                <span class="material-icons">edit</span>
-            </button>
-            <button class="nav-btn" data-page="settings">
-                <span data-translate="nav-settings">Settings</span>
-                <span class="material-icons">settings</span>
-            </button>
-        </div>
-    </div>
-
-    <div id="editorPage" class="page">
+    <div id="editorPage" class="page active">
         <div class="top-action-bar">
-            <button class="action-btn" id="editorBackBtn">
-                <span class="material-icons">arrow_back</span>
+            <button class="action-btn" id="resetBtn">
+                <span class="material-icons">refresh</span>
             </button>
             <div class="action-right">
-                <button class="action-btn" id="resetBtn">
-                    <span class="material-icons">refresh</span>
+                <button class="action-btn" id="settingsBtn">
+                    <span class="material-icons">settings</span>
                 </button>
                 <button class="action-btn primary" id="downloadBtn">
                     <span class="material-icons">download</span>
@@ -224,99 +176,75 @@
                 </button>
             </div>
         </div>
-        <div class="bottom-nav">
-            <button class="nav-btn" data-page="categories">
-                <span data-translate="nav-categories">Categories</span>
-                <span class="material-icons">grid_view</span>
-            </button>
-            <button class="nav-btn active" data-page="editor">
-                <span data-translate="nav-editor">Editor</span>
-                <span class="material-icons">edit</span>
-            </button>
-            <button class="nav-btn" data-page="settings">
-                <span data-translate="nav-settings">Settings</span>
-                <span class="material-icons">settings</span>
-            </button>
-        </div>
     </div>
 
-    <div id="settingsPage" class="page">
-        <div class="top-bar">
-            <h1 data-translate="settings-title">Settings</h1>
-        </div>
-        <div class="settings-content">
-            <div class="setting-section">
-                <h3 data-translate="theme-title">Theme</h3>
-                <div class="theme-options">
-                    <button class="theme-btn active" data-theme="dark">
-                        <span class="material-icons">dark_mode</span>
-                        <span data-translate="theme-dark">Dark</span>
-                    </button>
-                    <button class="theme-btn" data-theme="light">
-                        <span class="material-icons">light_mode</span>
-                        <span data-translate="theme-light">Light</span>
-                    </button>
-                    <button class="theme-btn" data-theme="gray">
-                        <span class="material-icons">contrast</span>
-                        <span data-translate="theme-gray">Gray</span>
-                    </button>
+    <div id="settingsPage" class="page settings-overlay">
+        <div class="settings-modal">
+            <div class="settings-header">
+                <h1 data-translate="settings-title">Settings</h1>
+                <button class="close-settings-btn" id="closeSettingsBtn">
+                    <span class="material-icons">close</span>
+                </button>
+            </div>
+            <div class="settings-content">
+                <div class="setting-section">
+                    <h3 data-translate="theme-title">Theme</h3>
+                    <div class="theme-options">
+                        <button class="theme-btn active" data-theme="dark">
+                            <span class="material-icons">dark_mode</span>
+                            <span data-translate="theme-dark">Dark</span>
+                        </button>
+                        <button class="theme-btn" data-theme="light">
+                            <span class="material-icons">light_mode</span>
+                            <span data-translate="theme-light">Light</span>
+                        </button>
+                        <button class="theme-btn" data-theme="gray">
+                            <span class="material-icons">contrast</span>
+                            <span data-translate="theme-gray">Gray</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="setting-section">
+                    <h3 data-translate="language-title">Language</h3>
+                    <div class="language-options">
+                        <button class="lang-btn active" data-lang="en">
+                            <span>🇬🇧</span>
+                            <span>English</span>
+                        </button>
+                        <button class="lang-btn" data-lang="fr">
+                            <span>🇫🇷</span>
+                            <span>Français</span>
+                        </button>
+                        <button class="lang-btn" data-lang="ar">
+                            <span>🇸🇦</span>
+                            <span>العربية</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="setting-section">
+                    <h3 data-translate="links-title">Links</h3>
+                    <a href="https://images.pexels.com/photos/7615523/pexels-photo-7615523.jpeg" target="_blank" class="setting-link">
+                        <span class="material-icons">info</span>
+                        <span data-translate="about">About & Copyright</span>
+                        <span class="material-icons">chevron_right</span>
+                    </a>
+                    <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
+                        <span class="material-icons">policy</span>
+                        <span data-translate="privacy">Privacy Policy</span>
+                        <span class="material-icons">chevron_right</span>
+                    </a>
+                    <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
+                        <span class="material-icons">email</span>
+                        <span data-translate="contact">Contact Us</span>
+                        <span class="material-icons">chevron_right</span>
+                    </a>
                 </div>
             </div>
-            <div class="setting-section">
-                <h3 data-translate="language-title">Language</h3>
-                <div class="language-options">
-                    <button class="lang-btn active" data-lang="en">
-                        <span>🇬🇧</span>
-                        <span>English</span>
-                    </button>
-                    <button class="lang-btn" data-lang="fr">
-                        <span>🇫🇷</span>
-                        <span>Français</span>
-                    </button>
-                    <button class="lang-btn" data-lang="ar">
-                        <span>🇸🇦</span>
-                        <span>العربية</span>
-                    </button>
-                </div>
-            </div>
-            <div class="setting-section">
-                <h3 data-translate="links-title">Links</h3>
-                <a href="https://images.pexels.com/photos/7615523/pexels-photo-7615523.jpeg" target="_blank" class="setting-link">
-                    <span class="material-icons">info</span>
-                    <span data-translate="about">About & Copyright</span>
-                    <span class="material-icons">chevron_right</span>
-                </a>
-                <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
-                    <span class="material-icons">policy</span>
-                    <span data-translate="privacy">Privacy Policy</span>
-                    <span class="material-icons">chevron_right</span>
-                </a>
-                <a href="https://openmoji.org/library/emoji-1F3C6" target="_blank" class="setting-link">
-                    <span class="material-icons">email</span>
-                    <span data-translate="contact">Contact Us</span>
-                    <span class="material-icons">chevron_right</span>
-                </a>
-            </div>
-        </div>
-        <div class="bottom-nav">
-            <button class="nav-btn" data-page="categories">
-                <span data-translate="nav-categories">Categories</span>
-                <span class="material-icons">grid_view</span>
-            </button>
-            <button class="nav-btn" data-page="editor">
-                <span data-translate="nav-editor">Editor</span>
-                <span class="material-icons">edit</span>
-            </button>
-            <button class="nav-btn active" data-page="settings">
-                <span data-translate="nav-settings">Settings</span>
-                <span class="material-icons">settings</span>
-            </button>
         </div>
     </div>
 
     <script src="js/config.js"></script>
     <script src="js/translations.js"></script>
-    <script src="js/gallery.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/editor.js"></script>
     <script src="js/main.js"></script>
